syntax = "proto3";
package state;
option go_package = "pb";

message Emoji {
	string id = 1;
	string guild_id = 2;
	string name = 3;
	repeated string roles = 4;
	bool managed = 5;
	bool require_colons = 6;
	bool animated = 7;
}

message SetEmojiRequest {
	Emoji emoji = 1;
}
message SetEmojiResponse {}
message GetEmojiRequest {
	string id = 1;
	string guild_id = 2;
}
message GetEmojiResponse {
	Emoji emoji = 1;
}
